bppackaging/src/objects/CustomerApproval__c.object
<CustomObject>
    <description>Object to hold approval from customer for their service Orders</description>
    <fields>
        <fullName>ApprovalDetailJson__c</fullName>
        <label>ApprovalDetailJson</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalType__c</fullName>
        <label>ApprovalType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Count__c</fullName>
        <label>Approval Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_key__c</fullName>
        <label>Section key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>CustomerApprovals</relationshipLabel>
        <relationshipName>CustomerApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CustomerApproval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ApprovalType__c</columns>
        <columns>Notes__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>CustomerApproval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomerApprovals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>